--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<script>window.location.href="http://cupidconnect.epizy.com"<script>
+<!DOCTYPE html>
+<html>
+<head>
+<title></title>
+</head>
+<body>
+    <script>
+        window.location.href="http://cupidconnect.epizy.com";
+    </script>
+</body>
+</html>
